# ftxui-c

./: .gitmodules  API_MAPPING.md  CMakeLists.txt  README.md  compat.c  ftxui_c_api.h  ftxui_c_wrapper.cpp  test_app_api.c  test_c.c
.github/workflows/: release.yml
